--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ."
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "cron": "^1.2.1",
     "dotenv": "^4.0.0",
     "node": "0.0.0",
+    "node-notifier": "^5.0.2",
     "snoowrap": "^1.12.0"
   }
 }
