--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a r6bot made by /u/SloppyStone",
   "scripts": {
     "start": "node -r dotenv/config index.js dotenv_config_path=./credentials/.env",
-    "startLinux": "nodejs -r dotenv/config index.js dotenv_config_path=./credentials/.env"
+    "startLinux": "nodejs -r dotenv/config index.js dotenv_config_path=./credentials/.env",
   },
   "dependencies": {
     "colors": "^1.1.2",
