--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "a r6bot made by /u/SloppyStone",
   "scripts": {
     "start": "node -r dotenv/config index.js dotenv_config_path=./credentials/.env",
-    "startLinux": "nodejs -r dotenv/config index.js dotenv_config_path=./credentials/.env",
+    "startLinux": "nodejs -r dotenv/config index.js dotenv_config_path=./credentials/.env"
   },
   "dependencies": {
     "colors": "^1.1.2",
     "dotenv": "^4.0.0",
+    "lowdb": "^0.16.0",
     "snoowrap": "^1.12.0"
   }
 }
