--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "colors": "^1.1.2",
     "dotenv": "^4.0.0",
     "lowdb": "^0.16.0",
-    "snoowrap": "^1.12.0"
+    "snoowrap": "^1.12.0",
+    "twitch-api": "^0.4.6"
   }
 }
